# CrimsonDesertCoop

./: .gitignore  CMakeLists.txt  README.md
docs/: RESEARCH_2026-04-18.md  REVERSE_ENGINEERING.md
include/cdcoop/core/: config.h  game_structures.h  hooks.h  memory.h
include/cdcoop/network/: packet.h  session.h  steam_network.h
include/cdcoop/player/: companion_hijack.h  player_manager.h
include/cdcoop/sync/: animation_sync.h  enemy_sync.h  mount_sync.h  player_sync.h  world_sync.h
include/cdcoop/ui/: overlay.h
src/asi/: dllmain.cpp
src/core/: config.cpp  game_structures.cpp  hooks.cpp  memory.cpp
src/network/: packet.cpp  session.cpp  steam_network.cpp
src/player/: companion_hijack.cpp  player_manager.cpp
src/sync/: animation_sync.cpp  enemy_sync.cpp  mount_sync.cpp  player_sync.cpp  world_sync.cpp
src/ui/: imgui_impl_dx12.cpp  overlay.cpp
tools/: offset_scanner.py
